--- a/exercise_6.5/exercises/exercise2.css
+++ b/exercise_6.5/exercises/exercise2.css
@@ -4,3 +4,15 @@ html {
 *, *:before, *:after {
   box-sizing: inherit;
 }
+
+@media only screen and (max-width:600px) {
+
+}
+
+@media only screen and (min-width: 768px) {
+
+} 
+
+@media only screen and (min-width: 992px) { 
+  
+}
