--- a/exercise_6.5/exercises/exercise1.css
+++ b/exercise_6.5/exercises/exercise1.css
@@ -37,17 +37,16 @@ figcaption {
     text-align: center;
     font-size: 40px;
   }
-
+  .column-container {
+    display: flex;
+    justify-content: center;
+  }
+  
   figure {
     /* float: left; */
-    width: 30%;
+    width: 80%;
     /* margin-right: 4.5%; */
 
-  }
-
-  .column {
-    display: flex;
-    flex-direction: column;
   }
 
 }
@@ -67,7 +66,10 @@ figcaption {
     font-size: 40px;
   }
   figure {
-    width: 30%;
-    /* margin-right: 2.5%; */
+    width: 80%;
+  }
+
+  .column figure {
+    margin: 40px;
   }
   }
