--- a/exercise_6.5/exercises/exercise2.css
+++ b/exercise_6.5/exercises/exercise2.css
@@ -1,3 +1,8 @@
+* {
+  margin: 0;
+  padding: 0;
+}
+
 html {
   box-sizing: border-box;
 }
@@ -5,14 +10,64 @@ html {
   box-sizing: inherit;
 }
 
-@media only screen and (max-width:600px) {
-
+body {
+  font-family: Arial, Helvetica, sans-serif;
+  text-align: justify;
 }
 
-@media only screen and (min-width: 768px) {
+h1 {
+    text-align: center;
+  }
 
+h2 {
+  margin-left: 15px;
+}
+
+header {
+  width: 100%;
+  height: 50px;
+  background-color: white;
+  display: flex;
+  position: fixed;
+  /* padding: 20px 50px; */
+  /* justify-content: space-between; */
+  z-index: 1;
+}
+
+header p {
+  
+}
+
+header ul{
+  width: 100%;
+  display: flex;
+  
+}
+
+header ul li {
+  /* align-self: flex-end; */
+}
+
+@media only screen and (max-width:600px) {
+  body {
+    background-color: steelblue;
+  }
+
+  h1 {
+    font-size: 28px;
+  }
+}
+
+@media only screen and (min-width: 600px) {
+  body {
+    background-color: sandybrown ;
+  }
+
+  
 } 
 
 @media only screen and (min-width: 992px) { 
-  
+  body {
+    background-color: slateblue;
+  }
 }
