--- a/exercise_6.5/exercises/exercise2.css
+++ b/exercise_6.5/exercises/exercise2.css
@@ -1,8 +1,7 @@
 * {
   margin: 0;
-  padding: 0;
+  
 }
-
 html {
   box-sizing: border-box;
 }
@@ -10,64 +9,277 @@ html {
   box-sizing: inherit;
 }
 
-body {
-  font-family: Arial, Helvetica, sans-serif;
-  text-align: justify;
-}
-
-h1 {
-    text-align: center;
+@media only screen and (max-width: 500px) {
+  body {
+    background-color: rgba(245, 152, 121, 0.932) ;
   }
 
-h2 {
-  margin-left: 15px;
-}
+  header {
+    background-color: rgb(245, 243, 243);
+    font-size: 1.2em;
+  }
 
-header {
-  width: 100%;
-  height: 50px;
-  background-color: white;
-  display: flex;
-  position: fixed;
-  /* padding: 20px 50px; */
-  /* justify-content: space-between; */
-  z-index: 1;
-}
+  header p {
+    font-size: 1.6em;
+    text-align: center;
+  }
+ 
+  nav {
+    background-color: rgb(73, 71, 71);
+  }
+  nav ul {
+    width: 100%;
+    display: flex;
+    margin: 3px 0px 3px 0px;
+    justify-content: space-around;
 
-header p {
-  
-}
+  }
 
-header ul{
-  width: 100%;
-  display: flex;
-  
-}
+  nav ul li {
+    margin: 0px 15px;
+    list-style-type: none;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    padding-right: 30px;
+    color: white;
+    
+  }
 
-header ul li {
-  /* align-self: flex-end; */
-}
+  #aside-containe {
+    display: flex;
+    flex-direction: column;
+    align-content: center;
+    font-size: 1.4em;
+    background-color: rgb(212, 189, 189);
+    margin: 10px 15px;
+    padding: 15px;
+  }
 
-@media only screen and (max-width:600px) {
-  body {
-    background-color: steelblue;
+  h2 {
+    text-align: center;
+    margin: 15px 0;
+  }
+
+  .aside-one ul, .aside-two ul {
+    margin-left: 0.5em;
+  }
+
+  .aside-one, .aside-two {
+    background-color: white;
+    padding-bottom: 15px;
   }
 
   h1 {
-    font-size: 28px;
+    text-align: center;
+    font-size: 2.7em;
+  }
+
+  .main-content p {
+    text-align: justify;
+    font-size: 1.4em;
+    margin: 23px 20px;
+  }
+
+  h3 {
+    text-align: center;
+    font-size: 1.4;
+  }
+
+  footer {
+    background-color: rgb(212, 189, 189);
+    margin: 10px 15px;
+    padding: 1px;
+  }
+
+  footer p {
+    margin: 10px 20px;
+    text-align: justify;
+    font-size: 1.1em;
   }
 }
 
-@media only screen and (min-width: 600px) {
+@media only screen and (min-width: 500px) and (max-width: 800px) {
   body {
-    background-color: sandybrown ;
+    background-color: rgba(202, 159, 50, 0.788);
   }
 
-  
+  header {
+    background-color: rgb(245, 243, 243);
+    font-size: 1.2em;
+  }
+
+  header p {
+    font-size: 1.6em;
+    text-align: center;
+  }
+ 
+  nav {
+    background-color: rgb(73, 71, 71);
+  }
+  nav ul {
+    width: 100%;
+    display: flex;
+    margin: 3px 0px 3px 0px;
+    justify-content: space-around;
+
+  }
+
+  nav ul li {
+    margin: 0px 15px;
+    list-style-type: none;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    padding-right: 30px;
+    color: white;
+    
+  }
+
+  #aside-containe {
+    display: flex;
+    align-content: center;
+    font-size: 1.6em;
+    background-color: rgb(80, 72, 72);
+    margin: 10px 15px;
+    padding: 10px;
+  }
+
+  h2 {
+    text-align: center;
+    margin: 15px 0;
+    font-size: 1.9em;
+  }
+
+  .aside-one ul, .aside-two ul {
+    margin-left: 0.5em;
+    
+  }
+
+  .aside-one, .aside-two {
+    background-color: white;
+    padding-bottom: 15px;
+  }
+
+  h1 {
+    text-align: center;
+    font-size: 2.9em;
+  }
+
+  .main-content p {
+    text-align: justify;
+    font-size: 1.6em;
+    margin: 23px 20px;
+  }
+
+  h3 {
+    text-align: center;
+    font-size: 1.7em;
+  }
+
+  footer {
+    background-color: rgb(80, 72, 72) ;
+    margin: 10px 15px;
+    padding: 1px;
+    color :white
+  }
+
+  footer p {
+    margin: 10px 10px;
+    text-align: justify;
+    font-size: 1.2em;
+  }
 } 
 
-@media only screen and (min-width: 992px) { 
+@media only screen and (min-width: 800px) { 
   body {
-    background-color: slateblue;
+    background-color: rgba(218, 127, 94, 0.966) ;
   }
+  
+    header {
+      background-color: rgb(245, 243, 243);
+      font-size: 1.2em;
+      display: flex;
+      justify-content: space-between;
+      padding: 10px;
+    }
+  
+    header p {
+      font-size: 1.6em;
+      text-align: center;
+      margin-left: 50px;
+    }
+   
+
+    nav ul {
+      width: 100%;
+      display: flex;
+      margin: 3px 0px 3px 0px;
+      justify-content: space-around;
+    }
+  
+    nav ul li {
+      margin: 0px 15px;
+      list-style-type: none;
+      padding-top: 5px;
+      padding-bottom: 5px;
+      padding-right: 30px;
+    }
+  
+    #aside-containe {
+      display: flex;
+      align-content: center;
+      font-size: 1.6em;
+      background-color: rgb(61, 32, 32);
+      margin: 10px 15px;
+      padding: 10px;
+      justify-content: center;
+
+    }
+  
+    h2 {
+      text-align: center;
+      margin: 15px 0;
+      font-size: 1.9em;
+    }
+  
+    .aside-one ul, .aside-two ul {
+      margin-left: 0.5em;
+      
+    }
+  
+    .aside-one, .aside-two {
+      background-color: white;
+      padding: 15px;
+      margin: 10px 50px 10px 10px;
+    }
+  
+    h1 {
+      text-align: center;
+      font-size: 2.9em;
+    }
+  
+    .main-content p {
+      text-align: justify;
+      font-size: 1.6em;
+      margin: 23px 20px;
+    }
+  
+    h3 {
+      text-align: center;
+      font-size: 1.7em;
+    }
+  
+    footer {
+      background-color: rgb(61, 32, 32) ;
+      margin: 10px 15px;
+      padding: 1px;
+      color :white
+    }
+  
+    footer p {
+      margin: 10px 10px;
+      text-align: justify;
+      font-size: 1.2em;
+    }
+
+
 }
