--- a/exercise_6.5/exercises/exercise3.css
+++ b/exercise_6.5/exercises/exercise3.css
@@ -1,3 +1,8 @@
+* {
+  margin: 0;
+  padding: 0;
+}
+
 #container {
   margin: 0 auto;
   width: 100%;
@@ -80,3 +85,68 @@
   padding: 20px;
   height: 1%;
 }
+
+@media only screen and (max-width: 450px) {
+  body {
+    padding: 0;
+  }
+  
+  #header {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 35px;
+    background: #ccc;
+    padding: 20px;
+    
+  }
+
+  #content img {
+    flex-basis: 100%;
+  }
+
+  #navigation {
+    float: left;
+    width: 100%;
+    background: #333;
+  }
+
+
+  #navigation ul li {
+  display: block;
+} 
+}
+
+@media only screen and (max-width: 900px) {
+  /* #header, #navigation, #footer {
+    display: none;
+  } dessa forma ja tira tudo */
+  #header {
+    background: none;
+    padding: 0;
+  }
+
+  #navigation {
+    float: none;
+    width: 0;
+    background: none;
+  }
+
+  #footer {
+    clear: none;
+    background: none;
+    text-align: none;
+    padding: 0;
+    height: 0;
+    }
+
+  #aside {
+    float: none;
+    width: 33%;
+    padding: 20px 0;
+    margin: 0 3% 0 0;
+    display: block;
+  }
+}
+
