C7 - Adicionado mudanças no exercicio 2 do dia 6.5

--- a/exercise_6.5/exercises/exercise2.css
+++ b/exercise_6.5/exercises/exercise2.css
@@ -262,6 +262,20 @@ html {
       font-size: 1.6em;
       margin: 23px 20px;
     }
+
+    .chapiter-conteiner {
+      display: flex;
+    }
+
+    .chapiter1{
+      background-color: whitesmoke;
+      margin: 10px 10px 0px 100px;
+    }
+
+    .chapiter2{
+      background-color: whitesmoke;
+      margin: 10px 100px 0px 10px;
+    }
   
     h3 {
       text-align: center;
